<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SharedSolar</string>
    
    <!-- common words -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="on">ON</string>
	<string name="off">OFF</string>
	
    <!-- home -->
    <string name="vendorLogin">Vendor Login</string>
    <string name="techLogin">Tech Login</string>
    <string name="about">About</string>
    <string name="versionLabel">Version:</string>
	<string name="deviceLabel">Device:</string>    
    <string name="loading">Loading ...</string>
    <string name="loginError">Login Error</string>
    <string name="vendorLoginTimeoutMsg">Login timeout! Please check wifi connection.</string>
    <string name="vendorLoginErrorMsg">Device needs to be synchronized by a field tech!</string>
    <string name="logout">Logout</string>
    
    <!-- tech -->
    <!-- tech auth -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="wrongPassword">Wrong Password!</string>
    <!-- tech add credit -->
    <string name="addCredit">Add Credit</string>
    <string name="denomination">Denomination</string>
    <string name="added">Added</string>
    <string name="own">Own</string>
    <string name="creditAddedLabel">Credit Added:</string>
    <string name="submit">Submit</string>
    <string name="addCreditConfirm">Continue?</string>
    <string name="invalidDevice">Invalid Device</string>
	<string name="invalidDeviceMsg">Please register the device on the gateway first!</string>
    <!-- tech sync device -->
    <string name="sync">Sync</string>
    <string name="syncWithMeter">Sync with Meter</string>
	<string name="syncWithGateway">Sync with Gateway</string>
    <string name="synchronizing">Synchronizing ...</string>
    <string name="syncCompleted">Sync Completed!</string>
    <string name="syncTimeout">Sync Timeout!</string>
    <string name="syncError">Sync Error!</string>
    <!-- tech token -->
    <string name="uploadingTokens">Uploading tokens to gateway ...</string>
    <string name="uploadError">Upload Error</string>
    <string name="uploadTokensTimeoutMsg">Uploading tokens timeout!</string>
	<string name="uploadTokensErrorMsg">Failed to upload tokens. Please make sure the device is connected to the Internet.</string>
    <string name="downloadingTokens">Downloading tokens from gateway ...</string>
    <string name="downloadError">Download Error</string>
    <string name="downloadTokensTimeoutMsg">Downloading tokens timeout!</string>
	<string name="downloadTokensErrorMsg">Failed to download tokens. Please make sure the device is connected to the Internet.</string>
    <string name="invalidTokens">Invalid Tokens</string>
    <string name="invalidTokensMsg">Tokens are in invalid format!</string>
    
    <!-- vendor -->
    <!-- vendor credit summary and history -->
    <string name="creditSummary">Credit Summary</string>
    <string name="total">Total</string>
    <string name="availableCredit">Available Credit</string>
    <string name="availableCreditLabel">Available Credit:</string>
    <string name="repository">Repository</string>
	<string name="history">History</string>
	<string name="date">Date</string>
    <!-- vendor account list -->
    <string name="accountList">Account List</string>
    <string name="accountListTimeoutMsg">Loading account list timeout!</string>
    <string name="loadingAccountListError">Failed to load account list!</string>
    <string name="account">Account</string>
    <string name="credit">Credit</string>
    <string name="accountIdEmptyMsg">Please assign an account ID to the circuit.</string>
    <string name="invalidAccountList">Invalid Account List</string>
    <string name="invalidAccountListMsg">Account list is in invalid format!</string>
    <!-- vendor add credit -->
	<string name="accountLabel">Account:</string>
	<string name="remain">Remain</string>
    <string name="addCreditTimeout">Add Credit Timeout!</string>
    <string name="addCreditError">Add Credit Error!</string>
    <string name="balanceLabel">Balance:</string>
	<string name="newBalanceLabel">New Balance:</string>
	<!-- vendor chart -->
	<string name="chart">Chart</string>
	<string name="energy">Energy</string>
	<string name="wh">Wh</string>
	<string name="power">Power</string>
	<string name="watt">Watt</string>
	<string name="circuitUsageTimeoutMsg">Loading circuit usage timeout!</string>
	<string name="invalidCircuitUsage">Invalid Circuit Usage</string>
	<string name="invalidCircuitUsageMsg">Circuit usage is in invalid format!</string>
	<string name="loadingCircuitUsageError">Failed to load circuit usage!</string>
	<string name="today">Today</string>
	<string name="current">Current</string>
	<string name="refresh">Refresh</string>
	<string name="turnAutoRefreshOff">Turn Auto Refresh Off</string>
	<string name="turnAutoRefreshOn">Turn Auto Refresh On</string>
	<!-- vendor switch circuit -->
	<string name="circuitSwitch">Circuit Switch</string>
	<string name="switchConfirm">Are you sure you want to switch account</string>
	<string name="switchingCircuit">Switching Circuit ...</string>
	<string name="switchCircuitTimeout">Switch Circuit Timeout!</string>
	<string name="switchCircuitError">Switch Circuit Error!</string>
	<string name="insufficientCredit">Insufficient Credit</string>
	<string name="insufficientCreditMsg">The credit for this account is 0. Please refill before switching it on.</string>
	<!-- to be translated -->
	
	
</resources>