<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:gravity="center">
	<Button android:text="@string/creditSummary" android:id="@+id/creditSummaryBtn"
		android:layout_height="wrap_content" android:layout_width="150dip"></Button>
	<Button android:text="@string/accountList" android:id="@+id/accountListBtn"
		android:layout_height="wrap_content" android:layout_width="150dip"></Button>
	<Button android:text="@string/chart" android:id="@+id/chartBtn"
		android:layout_height="wrap_content" android:layout_width="150dip"></Button>
	<Button android:text="@string/logout" android:id="@+id/logoutBtn"
		android:layout_height="wrap_content" android:layout_width="150dip"
		android:layout_marginTop="100dip"></Button>
</LinearLayout>

