<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center">
	<Button android:text="@string/addCredit" android:id="@+id/techAddCreditBtn"
		android:layout_height="wrap_content" android:layout_width="150dip"
		android:drawableLeft="@drawable/ic_tab_credit_selected"></Button>
	<Button android:text="@string/syncWithMeter" android:id="@+id/syncWithMeterBtn"
		android:layout_height="wrap_content" android:layout_width="150dip"
		android:drawableLeft="@drawable/ic_tab_sync"></Button>
	<Button android:text="@string/logout" android:id="@+id/logoutBtn"
		android:layout_height="wrap_content" android:layout_width="150dip"
		android:layout_marginTop="100dip"
		android:drawableLeft="@drawable/ic_tab_logout"></Button>
</LinearLayout>
