<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="right" >
		<TextView android:text="@string/accountLabel" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginRight="10dip" />
		<TextView android:id="@+id/accountTokenHistoryListAid" android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center_vertical">
		<TextView android:text="@string/date"
			android:layout_width="140dip" android:layout_height="wrap_content" />
		<TextView android:text="@string/denomination"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="right" />
	</LinearLayout>
	<View android:layout_width="fill_parent" android:layout_height="1dip"
		android:background="@android:color/background_light" />
	<ListView android:id="@+id/android:list"
		android:layout_height="fill_parent" android:layout_width="fill_parent" />
</LinearLayout>